--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "daisyui": "^5.5.19",
     "eslint": "^10.0.0",
+    "prettier": "^3.8.1",
     "tailwindcss": "^3.4.19",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.2.4"
   }
 }
